updated some propert

--- a/src/Styles/Homepage.css
+++ b/src/Styles/Homepage.css
@@ -41,6 +41,11 @@ html , body{
   border-bottom: 2px solid red;
 }
 
+.brand a{
+  text-decoration: none;
+  color: black;
+}
+
 
  .brand video {
   width: 100%;         
